icondir = $(datadir)/pixmaps/mc

ALLICONS =						\
	gnome-image-bmp.png				\
	gnome-image-generic.png				\
	gnome-image-gif.png				\
	gnome-image-ief.png				\
	gnome-image-jpeg.png				\
	gnome-image-pbm.png				\
	gnome-image-pgm.png				\
	gnome-image-png.png				\
	gnome-image-pnm.png				\
	gnome-image-ppm.png				\
	gnome-image-ras.png				\
	gnome-image-rgb.png				\
	gnome-image-tga.png				\
	gnome-image-tiff.png				\
	gnome-image-xbm.png				\
	gnome-image-xpm.png				\
	gnome-image-xwd.png				\
	gnome-library.png				\
	gnome-pack-deb.png				\
	gnome-pack-rpm.png				\
	gnome-pack-slp.png				\
	gnome-video-mpeg.png				\
	gnome-video-quicktime.png			\
	gnome-video-x-msvideo.png			\
	gnome-text-html.png				\
	gnome-http-url.png				\
	gnome-image-generic.png				\
	gnome-application-encapsulated_postscript.png	\
	gnome-application-pdf.png			\
	gnome-application-pgp.png			\
	gnome-application-postscript.png		\
	gnome-application-x-c-header.png		\
	gnome-application-x-c-source.png		\
	gnome-application-x-cc-source.png		\
	gnome-application-x-e-theme.png			\
	gnome-application-x-kde-app-info.png		\
	gnome-application-x-generic-spreadsheet.png	\
	gnome-application-x-gnome-app-info.png		\
	gnome-application-x-java-source.png		\
	gnome-application-x-php.png			\
	gnome-application-x-reject.png			\
	gnome-application-x-scheme-source.png		\
	gnome-application-x-sql.png			\
	gnome-package.png				\
	gnome-compressed.png				\
	gnome-core.png					\
	gnome-manpage.png				\
	gnome-objectfile.png				\
	gnome-textfile.png				\
	gnome-tex.png					\
	gnome-trashcan.png				\
	gnome-text-x-authors.png			\
	gnome-text-x-copying.png			\
	gnome-text-x-credits.png			\
	gnome-text-x-install.png			\
	gnome-text-x-makefile.png			\
	gnome-text-x-readme.png				\
	gnome-audio.png					\
	gnome-audio-basic.png				\
	gnome-audio-midi.png				\
	gnome-audio-ulaw.png				\
	gnome-audio-x-aiff.png				\
	gnome-audio-x-mod.png				\
	gnome-audio-x-mp3.png				\
	gnome-audio-x-pn-realaudio.png			\
	gnome-audio-x-s3m.png				\
	gnome-audio-x-stm.png				\
	gnome-audio-x-voc.png				\
	gnome-audio-x-wav.png				\
	gnome-audio-x-xi.png				\
	gnome-audio-x-xm.png				\
	gnome-font-afm.png				\
	gnome-font-ttf.png				\
	gnome-font-x-pcf.png				\
	gnome-image-psd.png				\
	gnome-image-xcf.png				\
	gnome-image-x-xfig.png

if GNOME
icon_DATA = $(ALLICONS)
else
icon_DATA =
endif

EXTRA_DIST = $(ALLICONS)
