SYNTAXFILES =			\
	Syntax			\
	ada95.syntax		\
	aspx.syntax		\
	c.syntax		\
	cs.syntax		\
	changelog.syntax	\
	diff.syntax		\
	dos.syntax		\
	eiffel.syntax		\
	fortran.syntax		\
	html.syntax		\
	java.syntax		\
	js.syntax		\
	latex.syntax		\
	lisp.syntax		\
	lsm.syntax		\
	m4.syntax		\
	mail.syntax		\
	makefile.syntax		\
	ml.syntax		\
	nroff.syntax		\
	octave.syntax		\
	pascal.syntax		\
	perl.syntax		\
	php.syntax		\
	po.syntax		\
	python.syntax		\
	ruby.syntax		\
	sh.syntax		\
	smalltalk.syntax	\
	slang.syntax		\
	spec.syntax		\
	sql.syntax		\
	swig.syntax		\
	syntax.syntax		\
	tcl.syntax		\
	texinfo.syntax		\
	unknown.syntax		\
	xml.syntax

if USE_EDIT
syntaxdir =		$(pkgdatadir)/syntax
syntax_DATA =		$(SYNTAXFILES)
endif

EXTRA_DIST =		$(SYNTAXFILES)
