SYNTAXFILES =			\
	Syntax			\
	ada95.syntax		\
	aspx.syntax		\
	assembler.syntax	\
	c.syntax		\
	changelog.syntax	\
 	debian-changelog.syntax \
 	debian-control.syntax   \
	debian-description.syntax \
 	debian-sources-list.syntax \
	cs.syntax		\
	css.syntax		\
	d.syntax		\
	diff.syntax		\
	dos.syntax		\
	eiffel.syntax		\
	fortran.syntax		\
	haskell.syntax		\
	html.syntax		\
	idl.syntax		\
	java.syntax		\
	js.syntax		\
	latex.syntax		\
	lisp.syntax		\
	lsm.syntax		\
	lua.syntax		\
	m4.syntax		\
	mail.syntax		\
	makefile.syntax		\
	ml.syntax		\
	nroff.syntax		\
	octave.syntax		\
	pascal.syntax		\
	perl.syntax		\
	php.syntax		\
	po.syntax		\
	povray.syntax		\
	procmail.syntax \
	python.syntax		\
	ruby.syntax		\
	sh.syntax		\
	smalltalk.syntax	\
	slang.syntax		\
	spec.syntax		\
	sql.syntax		\
	swig.syntax		\
	syntax.syntax		\
	tcl.syntax		\
	texinfo.syntax		\
	unknown.syntax		\
	xml.syntax

if USE_EDIT
syntaxdir =		$(pkgdatadir)/syntax
syntax_DATA =		$(SYNTAXFILES)
endif

EXTRA_DIST =		$(SYNTAXFILES)
