extdir = $(EXTHELPERSDIR)

SCRIPTS_IN = \
	doc.sh.in \
	misc.sh.in \
	text.sh.in

SCRIPTS_OUT = \
	doc.sh \
	misc.sh \
	text.sh

SCRIPTS_UNTOUCHED = \
	archive.sh \
	image.sh \
	package.sh \
	sound.sh \
	video.sh \
	web.sh

ext_SCRIPTS = \
	$(SCRIPTS_UNTOUCHED) \
	$(SCRIPTS_OUT)

EXTRA_DIST = \
	$(SCRIPTS_UNTOUCHED) \
	$(SCRIPTS_IN)

