extdir = $(EXTHELPERSDIR)

SCRIPTS_IN = \
	misc.sh.in \
	text.sh.in

SCRIPTS_OUT = \
	misc.sh \
	text.sh

SCRIPTS_UNTOUCHED = \
	archive.sh \
	doc.sh \
	image.sh \
	package.sh \
	sound.sh \
	video.sh \
	web.sh

ext_SCRIPTS = \
	$(SCRIPTS_UNTOUCHED) \
	$(SCRIPTS_OUT)

EXTRA_DIST = \
	$(SCRIPTS_UNTOUCHED) \
	$(SCRIPTS_IN)

