skindir = $(pkgdatadir)/skins

skin_DATA = \
	dark.ini \
	darkfar.ini \
	default.ini \
	double-lines.ini \
	featured.ini \
	gotar.ini \
	mc46.ini \
	modarcon16-defbg.ini \
	modarcon16.ini \
	modarcon16root-defbg.ini \
	modarcon16root.ini \
	modarin256-defbg.ini \
	modarin256.ini \
	modarin256root-defbg.ini \
	modarin256root.ini \
	nicedark.ini \
	sand256.ini \
	xoria256.ini


EXTRA_DIST = \
    $(skin_DATA)
