skindir = $(pkgdatadir)/skins

skin_DATA = \
	dark.ini \
	darkfar.ini \
	default.ini \
	double-lines.ini \
	featured-plus.ini \
	featured.ini \
	gotar.ini \
	gray-green-purple256.ini \
	gray-orange-blue256.ini \
	julia256.ini \
	julia256root.ini \
	mc46.ini \
	modarcon16-defbg.ini \
	modarcon16-defbg-thin.ini \
	modarcon16.ini \
	modarcon16-thin.ini \
	modarcon16root-defbg.ini \
	modarcon16root-defbg-thin.ini \
	modarcon16root-thin.ini \
	modarcon16root.ini \
	modarin256-defbg-thin.ini \
	modarin256-defbg.ini \
	modarin256-thin.ini \
	modarin256.ini \
	modarin256root-defbg-thin.ini \
	modarin256root-defbg.ini \
	modarin256root-thin.ini \
	modarin256root.ini \
	nicedark.ini \
	sand256.ini \
	seasons-autumn16M.ini \
	seasons-spring16M.ini \
	seasons-summer16M.ini \
	seasons-winter16M.ini \
	xoria256-thin.ini \
	xoria256.ini \
	xoria256root-thin.ini \
	yadt256-defbg.ini \
	yadt256.ini

EXTRA_DIST = \
    $(skin_DATA)
